--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Excel Processor</title>
+    <title>Excel Processor | Taylor's Edition</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Fonte Google inspirada em estética TS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div class="overlay"></div>
     <div class="container">
-      <h1>Processar Arquivo Excel</h1>
+      <h1>✨ Excel Processor (Taylor's Version) ✨</h1>
+      <p class="subtitle">Transforme seus arquivos com estilo 💜</p>
       <form id="uploadForm" enctype="multipart/form-data">
         <input type="file" name="file" accept=".xlsx,.xls" required />
-        <button type="submit">Enviar e Processar</button>
+        <button type="submit">🎶 Enviar e Processar 🎶</button>
       </form>
       <p id="status"></p>
     </div>
